--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.7",
     "express": "4.21.2",
+    "multer": "1.4.5-lts.1",
     "pg": "8.13.1",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.37.5"
+    "sequelize": "6.37.5",
+    "sharp": "0.33.5"
   },
   "devDependencies": {
     "nodemon": "3.1.9"
